--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2? family=Poppins:wght@600&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -14,7 +13,7 @@ body {
 header img {
     width: auto;
     height: 47px;
-    padding-left: 10px;
+    padding-left: 1rem;
     position: absolute;
 }
 
@@ -23,10 +22,10 @@ header {
     top: 0;
     left: 0;
     height: 72px;
-    width: 100%;
+    width: 100vw;
     padding: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     z-index: 10000;
     background: rgb(255, 255, 255);
@@ -35,14 +34,15 @@ header {
 
 header ul {
     display: flex;
-    margin-left: 72%;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    height: 100%;
+    width: 50%;
+    margin-right: 1.2rem;
 }
 
 header ul li {
     list-style: none;
-    margin-left: 20px;
 }
 
 header ul li a {
@@ -53,15 +53,14 @@ header ul li a {
 }
 
 header ul li a:hover,
-header ul li a.active {
+header ul li a:active {
     background: #5185EB;
     color: #ffffff;
 }
 
 .logo {
     height: 47px;
-    width: auto;
-    position: absolute;
+    width: 50%;
 }
 
 section {
